--- a/angelclothy.html
+++ b/angelclothy.html
@@ -3,40 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Angel Clothy</title>
 </head>
-<body style="background-color: rgb(71, 78, 60)">
-    <img src="C:\Ballasoaj\angelclothy.png" width="50" height="50" >
-    <h1>Welcome to Angel Clothy</h1>
-    <h2>Hello pick a page</h2>
+<body>
+    <h1>Welcome To Angel Clothy</h1>
+    <h3>Buy now or cry later</h3>
 
-<a href="views/page1.html">Page 1</a>
-
-<a href="views/page2.html">Page 2</a>
-
-<a href="views/page3.html">Page 3</a>
-
-    <style>
-h1{
-text-align: center;
-text-decoration: solid;
-color: rgb(60, 255, 245);
-font-size: 70px;
-font-family: serif;
-}
-h2{
-   text-align: left;
-   text-align: justify;
-text-decoration: solid;
-color: rgb(0, 183, 255);
-font-size: 16px;
-font-family: arial;
-}
-a:hover {
-
-   background-color: aqua;
-}
-
-    </style>
+    <div class ="nav">
+<ul>
+       <li><a href="#home">Home</a></li>
+      <li><a href="#men">Men</a></li>
+      <li><a href="#women">Women</a></li>
+      <li> <a href="#sports">Sports</a></li>
+     <li> <a href="#kids">Kids</a></li>
+    <li>  <a href="#platform">Platform</a>
+<ul>
+       <li> <a href="#">AC Platform</a></li>
+       <li> <a href="#">Feedback</a></li>
+       <li> <a href="#">Pricing</a></li>
+</ul>
+</li>
+       <li> <a href="#about">About</a></li> 
+ </ul>
+           
+    </div>
+   
 </body>
 </html>
